; ModuleID = '/home/carl/AnghaBench/stb/extr_stb_vorbis.c_vorbis_pump_first_frame.c'
source_filename = "/home/carl/AnghaBench/stb/extr_stb_vorbis.c_vorbis_pump_first_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vorbis_pump_first_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vorbis_pump_first_frame(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @vorbis_decode_packet(i32* %7, i32* %3, i32* %5, i32* %4)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @vorbis_finish_frame(i32* %12, i32 %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %11, %1
  %18 = load i32, i32* %6, align 4
  ret i32 %18
}

declare dso_local i32 @vorbis_decode_packet(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @vorbis_finish_frame(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
